libs/bng/test/negative/N0013_rate_invalid_symbol.bngl
# FAIL
# OUTPUT: error: Referenced id 'A' cannot be used in an expression.

begin molecule types
   A()
   B()
   C()
end molecule types

begin reaction rules
  A() + B() -> C() A
end reaction rules
